logs/turtlesim/build.make.003.log.stderr
In file included from /home/alfredo/turtlesim/src/ros_tutorials/turtlesim/include/turtlesim/turtle_frame.h:46:0,
                 from /home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtlesim.cpp:34:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/include/turtlesim/turtle.h:66:64: error: expected ‘;’ at end of member declaration
   void poseCallback(const geometry_msgs::Point::ConstPtr& point)
                                                                ^
make[2]: *** [CMakeFiles/turtlesim_node.dir/src/turtlesim.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
In file included from /home/alfredo/turtlesim/build/turtlesim/include/turtlesim/../../../../src/ros_tutorials/turtlesim/include/turtlesim/turtle_frame.h:46:0,
                 from /home/alfredo/turtlesim/build/turtlesim/include/turtlesim/moc_turtle_frame.cpp:9:
/home/alfredo/turtlesim/build/turtlesim/include/turtlesim/../../../../src/ros_tutorials/turtlesim/include/turtlesim/turtle.h:66:64: error: expected ‘;’ at end of member declaration
   void poseCallback(const geometry_msgs::Point::ConstPtr& point)
                                                                ^
make[2]: *** [CMakeFiles/turtlesim_node.dir/include/turtlesim/moc_turtle_frame.cpp.o] Error 1
In file included from /home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:30:0:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/include/turtlesim/turtle.h:66:64: error: expected ‘;’ at end of member declaration
   void poseCallback(const geometry_msgs::Point::ConstPtr& point)
                                                                ^
make[2]: *** [CMakeFiles/turtlesim_node.dir/src/turtle.cpp.o] Error 1
In file included from /home/alfredo/turtlesim/src/ros_tutorials/turtlesim/include/turtlesim/turtle_frame.h:46:0,
                 from /home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle_frame.cpp:30:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/include/turtlesim/turtle.h:66:64: error: expected ‘;’ at end of member declaration
   void poseCallback(const geometry_msgs::Point::ConstPtr& point)
                                                                ^
make[2]: *** [CMakeFiles/turtlesim_node.dir/src/turtle_frame.cpp.o] Error 1
make[1]: *** [CMakeFiles/turtlesim_node.dir/all] Error 2
make: *** [all] Error 2
